--- a/index.html
+++ b/index.html
@@ -136,21 +136,69 @@
             font-size: 10px;
             font-weight: bold;
             margin-right: 6px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+            transition: all 0.2s ease;
+        }
+
+        .badge:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
         }
 
         .badge.subscriber {
-            background: #9146ff;
+            background: linear-gradient(135deg, #9146ff, #bf46ff);
             color: white;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
         }
 
         .badge.moderator {
-            background: #00ff00;
+            background: linear-gradient(135deg, #00ff00, #00cc00);
             color: black;
+            font-weight: 700;
         }
 
         .badge.vip {
-            background: #ffd700;
+            background: linear-gradient(135deg, #ffd700, #ffb700);
             color: black;
+            font-weight: 700;
+        }
+
+        .badge.broadcaster {
+            background: linear-gradient(135deg, #ff0000, #cc0000);
+            color: white;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        }
+
+        .badge.founder {
+            background: linear-gradient(135deg, #ff00d0, #cc00a0);
+            color: white;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        }
+
+        .badge.staff {
+            background: linear-gradient(135deg, #ff0000, #cc0000);
+            color: white;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        }
+
+        .badge.admin {
+            background: linear-gradient(135deg, #ff0000, #cc0000);
+            color: white;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        }
+
+        .badge.global_mod {
+            background: linear-gradient(135deg, #00ff00, #00cc00);
+            color: black;
+            font-weight: 700;
+        }
+
+        .badge.premium {
+            background: linear-gradient(135deg, #ffd700, #ffb700);
+            color: black;
+            font-weight: 700;
         }
 
         .status {
