--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         .message.subscriber {
             border-left-color: #9146ff;
-            background: rgba(255, 107, 107, 0.15);
+            background: rgba(145, 70, 255, 0.15);
         }
 
         .message.moderator {
@@ -1045,10 +1045,17 @@
                 const usernameSpan = document.createElement('span');
                 usernameSpan.className = 'username username-bubble';
                 
-                const mainColor = messageObj.color;
+                const mainColor = this.normalizeHex(messageObj.color);
                 const darkerColor = this.getDarkerColor(mainColor);
                 usernameSpan.style.background = `linear-gradient(90deg, ${mainColor}, ${darkerColor})`;
-                usernameSpan.style.color = '#fff';
+                // Check brightness for text color
+                if (this.isColorBright(mainColor)) {
+                    usernameSpan.style.setProperty('color', '#222', 'important');
+                    usernameSpan.style.textShadow = '0 1px 2px rgba(255,255,255,0.5)';
+                } else {
+                    usernameSpan.style.setProperty('color', '#fff', 'important');
+                    usernameSpan.style.textShadow = '0 1px 2px rgba(0,0,0,0.3)';
+                }
                 usernameSpan.textContent = messageObj.username;
                 
                 return usernameSpan;
@@ -1159,6 +1166,28 @@
 
             applyRadius() {
                 this.previewRadius(this.CONFIG.RADIUS);
+            }
+
+            // Utility: check if a hex color is bright
+            isColorBright(hex) {
+                // Remove # if present
+                hex = hex.replace('#', '');
+                // Parse r, g, b
+                let r = parseInt(hex.substring(0,2), 16) / 255;
+                let g = parseInt(hex.substring(2,4), 16) / 255;
+                let b = parseInt(hex.substring(4,6), 16) / 255;
+                // Calculate luminance
+                const luminance = 0.299 * r + 0.587 * g + 0.114 * b;
+                return luminance > 0.7;
+            }
+
+            // Utility: normalize hex color to 6 digits
+            normalizeHex(hex) {
+                hex = hex.replace('#', '').toLowerCase();
+                if (hex.length === 3) {
+                    hex = hex[0]+hex[0]+hex[1]+hex[1]+hex[2]+hex[2];
+                }
+                return '#' + hex.padEnd(6, 'f');
             }
         }
 
